assets/css/lancar-notas.css
@media print {

    header,
    #botaoVoltar,
    .botoes,
    #non-printable {
        display: none !important;
    }

    #printable {
        display: block;
    }
}

.notification-box {
    margin-top: 15px;
    display: flex;
    justify-self: center;
    align-self: center;
    position: relative;
    z-index: 1;
    font-weight: 400;
    font-family: Roboto, sans-serif;
    font-size: 12px;
  }
  
  .notification {
    display: flex;
    align-items: center;
    background-color: #0DAB01;
    background-image: linear-gradient(to right, #8cff8c, #006400);
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: 100% 3px;
    color: #fff;
    padding: 10px 15px;
    border-radius: 4px;
    width: 272px;
    height: 20px;
    margin: 0 auto;
    opacity: 0;
    transform: translateY(-100%);
    transition: opacity 0.3s ease, transform 0.3s ease;
  }
  
  .notification.success {
    background-color: #0DAB01;
  }
  
  .notification svg {
    width: 30px;
    height: 20px;
    margin-right: 1px;
  }

  .notification p, svg {
    margin: 0;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-around;
    flex-wrap: wrap;
  }

  button.close-button{
    display: flex;
    margin-left: auto;
    align-items: center;
    background-color: transparent;
    border: none;
    color: #fff;
    font-size: 20px;
    cursor: pointer;
    position: absolute;
    top: 0;
    right: 0;
    width: 40px;
    height: 40px;
  }
  
  
.formularioNotas {
    display: flex;
    width: 600px;
    height: fit-content;
    background-color: #fff;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
    margin: 15px auto;
    border: 1px solid #fff;
    border-radius: 6px;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
    padding: 40px 20px
}

.lançarNotas {
    font-family: "Montserrat", sans-serif;
    margin: 0 auto;
    font-size: 12px;
    font-weight: bold;
    z-index: 0;
}

#nomeGato {
    font-size: 32px;
    font-weight: 700;
}

#fotoGato {
    border-radius: 50%;
}
#data {
    font-size: 20px;
    font-weight: 700;
    color: #5a5a5a;
}

.primeiroItemLancarNotas {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-top: 1px solid #dad9d9;
    border-bottom: 1px solid #dad9d9;
    padding: 10px 0;
}

.primeiroItemLancarNotas div h2 {
    font-size: 24px;
    font-weight: 700;
    margin: 10px 0;
}

.itemLançarNotas {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #dad9d9;
    padding: 10px 0;
}

.itemLançarNotas div h2 {
    font-size: 24px;
    font-weight: 700;
    margin: 10px 0;
}

.dadosGato {
    display: flex;
    align-items: center;
}

.dadosGato h1 {
    font-size: 2em;
    text-align: center;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 200px;

}

.frase {
    display: flex;
    font-size: 16px;
    font-weight: 400;
    margin: 10px 0;
}

.iconeGato {
    font-size: 28px;
    width: 30px;
    height: 30px;
}

.iconePata {
    width: 30px;
    height: 30px;
    cursor: pointer
}

.cabeçalhoLançarNotas {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 20px 0;
}

.patas {
    display: flex;
    gap: 7px;
}

span.botoes {
    display: flex;
    flex-direction: row;
    margin: 0;
    justify-content: space-evenly;
    padding: 20px;
}

.botaoSalvar,
.botaoSalvar:enabled {
    font-family: 'Roboto', sans-serif;
    font-size: 1rem;
    padding: 10px 80px;
    background-color: #EB339B;
    color: #fff;
    border: 2.5px solid #EB339B;
    border-radius: 4px;
    cursor: pointer;
}

.botaoSalvar:disabled,
.botaoSalvar--desabilitado {
    background-color: #9f9f9f;
    border: 2.5px solid #9f9f9f;
    color: white;
    cursor: not-allowed;
}

.botaoImprimir {
    font-size: 1rem;
    padding: 10.5px 70px;
    color: #EB339B;
    background-color: #fff;
    text-decoration: none;
    border: 2px solid #EB339B;
    border-radius: 4px;
    cursor: pointer;

}

.botaoImprimir:disabled {
    cursor: not-allowed;
    border: 2.5px solid #9f9f9f;
    color: white;
    text-align: center;
    background-color: #9f9f9f;
}

@media screen and (max-width: 290px) {

    #nomeGato,
    #data {
        font-size: 12px;
        max-width: 5px;
    }

}

@media screen and (max-width: 768px) {

    .formularioNotas {
        display: flex;
        flex-direction: column;
        width: 80%;
    }

    .primeiroItemLancarNotas,
    .itemLançarNotas {
        display: flex;
        flex-direction: column;
        width: 100%;
        align-items: center;
        justify-content: center;
    }

    #nomeGato {
        font-size: 24px;
        width: fit-content;
        max-width: 95px;
    }

    #botaoVoltar img {
        width: 75%;
    }

    img#fotoGato,
    #nomeGato,
    #data {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        width: fit-content;
        justify-content: space-between;
        padding-left: .5%;
    }

    .formularioNotas h2,
    .frase {
        text-align: center;
        justify-content: center;
    }

    div .patas {
        display: inline-block;
        flex-direction: row;
    }


    .gatoItemLista {

        flex-direction: column;
        text-overflow: ellipsis;
        overflow: hidden;
        max-width: 100%;

    }

    .gatoItemLista div {
        flex-direction: column;
        align-items: flex-start;
        text-overflow: ellipsis;
        overflow: hidden;
        max-width: 100%;
        justify-content: center;
        align-items: center;
        padding: 10px 0;
    }

    .gatoItemLista div img {
        margin: 20px auto;
        width: 70px;
        height: 70px;
        justify-content: center;
        align-items: center;
    }

    span.botoes {
        height: fit-content;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .botaoSalvar,
    .botaoSalvar--desabilitado {
        margin-top: 15px;
        width: 100%;
        text-align: center;
        max-width: 260px;
        height: 40px;
    }

    .botaoImprimir {
        margin-top: 15px;
        max-width: 260px;
        width: 100%;
        text-align: center;
        height: 40px;
        cursor: pointer;
    }

    .botaoImprimir:disabled {
        cursor: not-allowed;
        border: 2.5px solid #9f9f9f;
        color: white;
        width: 100%;
        text-align: center;
        background-color: #9f9f9f;
    }
}

